--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,10 +40,10 @@ find_package(bacio 2.4.0 REQUIRED)
 find_package(sp 2.3.3 REQUIRED)
 find_package(ip 3.3.3 REQUIRED)
 find_package(w3emc 2.9.2 REQUIRED)
-find_package(g2 3.4.0 REQUIRED)
-if (g2_VERSION GREATER_EQUAL 3.5.0)
-  find_package(g2c 1.7.0 REQUIRED)
-endif()
+#find_package(g2 3.4.0 REQUIRED)
+#if (g2_VERSION GREATER_EQUAL 3.5.0)
+#  find_package(g2c 1.7.0 REQUIRED)
+#endif()
 
 # The name of the bacio library changed with the 2.5.0 release. The
 # "_4" was removed from the library and include directory name in the
@@ -65,9 +65,9 @@ endif()
 add_subdirectory(src)
 
 # Turn on tests.
-include(CTest)
-if(BUILD_TESTING)
-  add_subdirectory(tests)
-endif()
+#include(CTest)
+#if(BUILD_TESTING)
+#  add_subdirectory(tests)
+#endif()
 
 
