--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,9 @@ if(OPENMP)
 endif()
 
 # Find these required compression libraries.
-find_package(Jasper 2.0.25 REQUIRED)
-find_package(PNG REQUIRED)
-find_package(ZLIB REQUIRED)
+#find_package(Jasper 2.0.25 REQUIRED)
+#find_package(PNG REQUIRED)
+#find_package(ZLIB REQUIRED)
 
 # Find the NCEPLIBS libraries we need.
 find_package(bacio 2.4.0 REQUIRED)
